--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -56,23 +56,29 @@ typeMismatch.java.math.BigInteger=Property {0} must be a valid number
 
 landlord.phone.matches.invalid =You must provide a valid phone number in this form: (123) 456-7890.
 landlord.phone.blank=You must provide a phone number of the format (123) 456-7890.
+landlord.phone.nullable=
 
 landlord.email.email.invalid =You must provide a valid email.
 landlord.email.blank=You must provide a valid email.
+landlord.email.nullable=
 
 landlord.userId.blank=Please provide a User ID.
 landlord.userId.invalid=You must provide a unique User ID between 3 and 15 characters.
 landlord.userId.size.toosmall=You must provide a unique User ID between 3 and 15 characters.
 landlord.userId.size.toobig=You must provide a unique User ID between 3 and 15 characters.
+landlord.userId.nullable=
 
 landlord.firstName.blank=Please provide your first name.
 landlord.firstName.invalid=Your first name must be less than 20 characters.
 landlord.firstName.size.toobig=Your first name must be less than 20 characters.
+landlord.firstName.nullable=
 
 landlord.lastName.blank=Please provide your last name.
 landlord.lastName.invalid=You must provide a valid last name.
+landlord.lastName.nullable=
 
 landlord.password.blank=You must provide a password.
-landlord.password.validator.error=Your password must be different from your User ID and between 6 and 12 characters.
-landlord.password.size.toosmall=Your password must be different from your User ID and between 6 and 12 characters.
-landlord.password.size.toobig=Your password must be different from your User ID and between 6 and 12 characters.
+landlord.password.validator.error=Your password must be different from your User ID
+landlord.password.size.toosmall=Your password must be between 6 and 12 characters.
+landlord.password.size.toobig=Your password must be between 6 and 12 characters.
+landlord.password.nullable = 
